<resources>
    <string name="app_name">Homework2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="weight">Weight</string>
    <string name="set">Set</string>
    <string name="status">Your Status</string>
    <string name="viewdrinks">View Drinks</string>
    <string name="adddrinks">Add Drinks</string>
    <string name="reset">Reset</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="enterweight">Enter Weight</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
</resources>